-- Ganti nama tabel & kolom ke bahasa Indonesia tanpa kehilangan data.
-- Hanya RENAME (bukan drop/create), lalu indeks dibuat ulang dengan nama baru.
-- Rujukan foreign key ikut diperbarui otomatis oleh SQLite saat tabel/kolom di-rename.

-- 1) Hapus indeks lama (namanya masih memakai nama tabel/kolom lama)
DROP INDEX "AcademicYear_name_key";
DROP INDEX "Activity_slug_key";
DROP INDEX "Admission_applicationNo_key";
DROP INDEX "Admission_studentId_key";
DROP INDEX "Announcement_slug_key";
DROP INDEX "AssessmentDomain_name_key";
DROP INDEX "AssessmentScale_code_key";
DROP INDEX "Assessment_studentId_academicYearId_period_domainId_key";
DROP INDEX "Attendance_attendanceDate_idx";
DROP INDEX "Attendance_studentId_attendanceDate_idx";
DROP INDEX "Attendance_studentId_attendanceDate_key";
DROP INDEX "AuditLog_createdAt_idx";
DROP INDEX "AuditLog_entityType_entityId_idx";
DROP INDEX "Class_academicYearId_code_key";
DROP INDEX "DevelopmentItem_reportId_domainId_key";
DROP INDEX "DevelopmentReport_reportNo_key";
DROP INDEX "DevelopmentReport_studentId_academicYearId_period_key";
DROP INDEX "Enrollment_studentId_academicYearId_key";
DROP INDEX "Expense_expenseNo_key";
DROP INDEX "FeeType_code_key";
DROP INDEX "Guardian_userId_key";
DROP INDEX "Invoice_dueDate_idx";
DROP INDEX "Invoice_invoiceNo_key";
DROP INDEX "Invoice_studentId_status_idx";
DROP INDEX "PasswordResetToken_tokenHash_key";
DROP INDEX "PaymentAllocation_paymentId_invoiceId_key";
DROP INDEX "Payment_receiptNo_key";
DROP INDEX "Student_nis_key";
DROP INDEX "Student_nisn_key";
DROP INDEX "Student_studentCode_key";
DROP INDEX "Teacher_employeeCode_key";
DROP INDEX "Teacher_userId_key";
DROP INDEX "User_email_key";
DROP INDEX "User_username_key";

-- 2) Ganti nama tabel lalu kolom
ALTER TABLE "User" RENAME TO "pengguna";
ALTER TABLE "pengguna" RENAME COLUMN "id" TO "id_pengguna";
ALTER TABLE "pengguna" RENAME COLUMN "name" TO "nama";
ALTER TABLE "pengguna" RENAME COLUMN "username" TO "nama_pengguna";
ALTER TABLE "pengguna" RENAME COLUMN "passwordHash" TO "kata_sandi_hash";
ALTER TABLE "pengguna" RENAME COLUMN "role" TO "peran";
ALTER TABLE "pengguna" RENAME COLUMN "isActive" TO "aktif";
ALTER TABLE "pengguna" RENAME COLUMN "lastLoginAt" TO "terakhir_masuk";
ALTER TABLE "pengguna" RENAME COLUMN "createdAt" TO "dibuat_pada";
ALTER TABLE "pengguna" RENAME COLUMN "updatedAt" TO "diperbarui_pada";

ALTER TABLE "Guardian" RENAME TO "wali";
ALTER TABLE "wali" RENAME COLUMN "id" TO "id_wali";
ALTER TABLE "wali" RENAME COLUMN "userId" TO "id_pengguna";
ALTER TABLE "wali" RENAME COLUMN "fullName" TO "nama_lengkap";
ALTER TABLE "wali" RENAME COLUMN "relationship" TO "hubungan";
ALTER TABLE "wali" RENAME COLUMN "occupation" TO "pekerjaan";
ALTER TABLE "wali" RENAME COLUMN "companyName" TO "nama_perusahaan";
ALTER TABLE "wali" RENAME COLUMN "education" TO "pendidikan";
ALTER TABLE "wali" RENAME COLUMN "phone" TO "telepon";
ALTER TABLE "wali" RENAME COLUMN "address" TO "alamat";
ALTER TABLE "wali" RENAME COLUMN "notes" TO "catatan";
ALTER TABLE "wali" RENAME COLUMN "createdAt" TO "dibuat_pada";
ALTER TABLE "wali" RENAME COLUMN "updatedAt" TO "diperbarui_pada";

ALTER TABLE "Teacher" RENAME TO "guru";
ALTER TABLE "guru" RENAME COLUMN "id" TO "id_guru";
ALTER TABLE "guru" RENAME COLUMN "userId" TO "id_pengguna";
ALTER TABLE "guru" RENAME COLUMN "employeeCode" TO "kode_pegawai";
ALTER TABLE "guru" RENAME COLUMN "fullName" TO "nama_lengkap";
ALTER TABLE "guru" RENAME COLUMN "phone" TO "telepon";
ALTER TABLE "guru" RENAME COLUMN "education" TO "pendidikan";
ALTER TABLE "guru" RENAME COLUMN "specialization" TO "spesialisasi";
ALTER TABLE "guru" RENAME COLUMN "joinDate" TO "tanggal_bergabung";
ALTER TABLE "guru" RENAME COLUMN "isActive" TO "aktif";
ALTER TABLE "guru" RENAME COLUMN "createdAt" TO "dibuat_pada";
ALTER TABLE "guru" RENAME COLUMN "updatedAt" TO "diperbarui_pada";

ALTER TABLE "AcademicYear" RENAME TO "tahun_ajaran";
ALTER TABLE "tahun_ajaran" RENAME COLUMN "id" TO "id_tahun_ajaran";
ALTER TABLE "tahun_ajaran" RENAME COLUMN "name" TO "nama";
ALTER TABLE "tahun_ajaran" RENAME COLUMN "startDate" TO "tanggal_mulai";
ALTER TABLE "tahun_ajaran" RENAME COLUMN "endDate" TO "tanggal_selesai";
ALTER TABLE "tahun_ajaran" RENAME COLUMN "createdAt" TO "dibuat_pada";
ALTER TABLE "tahun_ajaran" RENAME COLUMN "updatedAt" TO "diperbarui_pada";

ALTER TABLE "Student" RENAME TO "siswa";
ALTER TABLE "siswa" RENAME COLUMN "id" TO "id_siswa";
ALTER TABLE "siswa" RENAME COLUMN "studentCode" TO "kode_siswa";
ALTER TABLE "siswa" RENAME COLUMN "fullName" TO "nama_lengkap";
ALTER TABLE "siswa" RENAME COLUMN "nickname" TO "nama_panggilan";
ALTER TABLE "siswa" RENAME COLUMN "gender" TO "jenis_kelamin";
ALTER TABLE "siswa" RENAME COLUMN "birthPlace" TO "tempat_lahir";
ALTER TABLE "siswa" RENAME COLUMN "birthDate" TO "tanggal_lahir";
ALTER TABLE "siswa" RENAME COLUMN "religion" TO "agama";
ALTER TABLE "siswa" RENAME COLUMN "address" TO "alamat";
ALTER TABLE "siswa" RENAME COLUMN "village" TO "kelurahan";
ALTER TABLE "siswa" RENAME COLUMN "district" TO "kecamatan";
ALTER TABLE "siswa" RENAME COLUMN "city" TO "kota";
ALTER TABLE "siswa" RENAME COLUMN "province" TO "provinsi";
ALTER TABLE "siswa" RENAME COLUMN "postalCode" TO "kode_pos";
ALTER TABLE "siswa" RENAME COLUMN "childOrder" TO "anak_ke";
ALTER TABLE "siswa" RENAME COLUMN "siblingsCount" TO "jumlah_saudara";
ALTER TABLE "siswa" RENAME COLUMN "residenceStatus" TO "status_tempat_tinggal";
ALTER TABLE "siswa" RENAME COLUMN "admissionDate" TO "tanggal_masuk";
ALTER TABLE "siswa" RENAME COLUMN "withdrawalDate" TO "tanggal_keluar";
ALTER TABLE "siswa" RENAME COLUMN "withdrawalReason" TO "alasan_keluar";
ALTER TABLE "siswa" RENAME COLUMN "photoPath" TO "lokasi_foto";
ALTER TABLE "siswa" RENAME COLUMN "notes" TO "catatan";
ALTER TABLE "siswa" RENAME COLUMN "createdAt" TO "dibuat_pada";
ALTER TABLE "siswa" RENAME COLUMN "updatedAt" TO "diperbarui_pada";

ALTER TABLE "StudentGuardian" RENAME TO "siswa_wali";
ALTER TABLE "siswa_wali" RENAME COLUMN "studentId" TO "id_siswa";
ALTER TABLE "siswa_wali" RENAME COLUMN "guardianId" TO "id_wali";
ALTER TABLE "siswa_wali" RENAME COLUMN "isPrimary" TO "wali_utama";
ALTER TABLE "siswa_wali" RENAME COLUMN "canPickup" TO "boleh_menjemput";
ALTER TABLE "siswa_wali" RENAME COLUMN "createdAt" TO "dibuat_pada";

ALTER TABLE "Class" RENAME TO "kelas";
ALTER TABLE "kelas" RENAME COLUMN "id" TO "id_kelas";
ALTER TABLE "kelas" RENAME COLUMN "academicYearId" TO "id_tahun_ajaran";
ALTER TABLE "kelas" RENAME COLUMN "code" TO "kode";
ALTER TABLE "kelas" RENAME COLUMN "name" TO "nama";
ALTER TABLE "kelas" RENAME COLUMN "level" TO "jenjang";
ALTER TABLE "kelas" RENAME COLUMN "room" TO "ruang";
ALTER TABLE "kelas" RENAME COLUMN "teacherId" TO "id_guru";
ALTER TABLE "kelas" RENAME COLUMN "capacity" TO "kapasitas";
ALTER TABLE "kelas" RENAME COLUMN "createdAt" TO "dibuat_pada";
ALTER TABLE "kelas" RENAME COLUMN "updatedAt" TO "diperbarui_pada";

ALTER TABLE "Enrollment" RENAME TO "penempatan_kelas";
ALTER TABLE "penempatan_kelas" RENAME COLUMN "id" TO "id_penempatan";
ALTER TABLE "penempatan_kelas" RENAME COLUMN "studentId" TO "id_siswa";
ALTER TABLE "penempatan_kelas" RENAME COLUMN "academicYearId" TO "id_tahun_ajaran";
ALTER TABLE "penempatan_kelas" RENAME COLUMN "classId" TO "id_kelas";
ALTER TABLE "penempatan_kelas" RENAME COLUMN "enrollmentDate" TO "tanggal_penempatan";
ALTER TABLE "penempatan_kelas" RENAME COLUMN "notes" TO "catatan";
ALTER TABLE "penempatan_kelas" RENAME COLUMN "createdAt" TO "dibuat_pada";
ALTER TABLE "penempatan_kelas" RENAME COLUMN "enrollmentUpdatedAt" TO "diperbarui_pada";

ALTER TABLE "AdmissionPeriod" RENAME TO "periode_ppdb";
ALTER TABLE "periode_ppdb" RENAME COLUMN "id" TO "id_periode_ppdb";
ALTER TABLE "periode_ppdb" RENAME COLUMN "name" TO "nama";
ALTER TABLE "periode_ppdb" RENAME COLUMN "startDate" TO "tanggal_mulai";
ALTER TABLE "periode_ppdb" RENAME COLUMN "endDate" TO "tanggal_selesai";
ALTER TABLE "periode_ppdb" RENAME COLUMN "isActive" TO "aktif";
ALTER TABLE "periode_ppdb" RENAME COLUMN "requirementsText" TO "persyaratan";
ALTER TABLE "periode_ppdb" RENAME COLUMN "notes" TO "catatan";
ALTER TABLE "periode_ppdb" RENAME COLUMN "createdAt" TO "dibuat_pada";
ALTER TABLE "periode_ppdb" RENAME COLUMN "updatedAt" TO "diperbarui_pada";

ALTER TABLE "Admission" RENAME TO "pendaftaran_ppdb";
ALTER TABLE "pendaftaran_ppdb" RENAME COLUMN "id" TO "id_pendaftaran";
ALTER TABLE "pendaftaran_ppdb" RENAME COLUMN "applicationNo" TO "no_pendaftaran";
ALTER TABLE "pendaftaran_ppdb" RENAME COLUMN "admissionPeriodId" TO "id_periode_ppdb";
ALTER TABLE "pendaftaran_ppdb" RENAME COLUMN "studentId" TO "id_siswa";
ALTER TABLE "pendaftaran_ppdb" RENAME COLUMN "studentFullName" TO "nama_calon_siswa";
ALTER TABLE "pendaftaran_ppdb" RENAME COLUMN "studentGender" TO "jenis_kelamin_calon";
ALTER TABLE "pendaftaran_ppdb" RENAME COLUMN "studentBirthPlace" TO "tempat_lahir_calon";
ALTER TABLE "pendaftaran_ppdb" RENAME COLUMN "studentBirthDate" TO "tanggal_lahir_calon";
ALTER TABLE "pendaftaran_ppdb" RENAME COLUMN "guardianName" TO "nama_wali";
ALTER TABLE "pendaftaran_ppdb" RENAME COLUMN "guardianRelationship" TO "hubungan_wali";
ALTER TABLE "pendaftaran_ppdb" RENAME COLUMN "guardianPhone" TO "telepon_wali";
ALTER TABLE "pendaftaran_ppdb" RENAME COLUMN "guardianEmail" TO "email_wali";
ALTER TABLE "pendaftaran_ppdb" RENAME COLUMN "guardianAddress" TO "alamat_wali";
ALTER TABLE "pendaftaran_ppdb" RENAME COLUMN "preferredLevel" TO "jenjang_pilihan";
ALTER TABLE "pendaftaran_ppdb" RENAME COLUMN "previousSchool" TO "sekolah_asal";
ALTER TABLE "pendaftaran_ppdb" RENAME COLUMN "notes" TO "catatan";
ALTER TABLE "pendaftaran_ppdb" RENAME COLUMN "rejectionReason" TO "alasan_penolakan";
ALTER TABLE "pendaftaran_ppdb" RENAME COLUMN "reviewedBy" TO "ditinjau_oleh";
ALTER TABLE "pendaftaran_ppdb" RENAME COLUMN "reviewedAt" TO "ditinjau_pada";
ALTER TABLE "pendaftaran_ppdb" RENAME COLUMN "submittedAt" TO "dikirim_pada";
ALTER TABLE "pendaftaran_ppdb" RENAME COLUMN "createdAt" TO "dibuat_pada";
ALTER TABLE "pendaftaran_ppdb" RENAME COLUMN "updatedAt" TO "diperbarui_pada";

ALTER TABLE "AdmissionDocument" RENAME TO "dokumen_pendaftaran";
ALTER TABLE "dokumen_pendaftaran" RENAME COLUMN "id" TO "id_dokumen_pendaftaran";
ALTER TABLE "dokumen_pendaftaran" RENAME COLUMN "admissionId" TO "id_pendaftaran";
ALTER TABLE "dokumen_pendaftaran" RENAME COLUMN "documentType" TO "jenis_dokumen";
ALTER TABLE "dokumen_pendaftaran" RENAME COLUMN "originalName" TO "nama_file_asli";
ALTER TABLE "dokumen_pendaftaran" RENAME COLUMN "storagePath" TO "lokasi_file";
ALTER TABLE "dokumen_pendaftaran" RENAME COLUMN "mimeType" TO "tipe_mime";
ALTER TABLE "dokumen_pendaftaran" RENAME COLUMN "sizeBytes" TO "ukuran_byte";
ALTER TABLE "dokumen_pendaftaran" RENAME COLUMN "createdAt" TO "dibuat_pada";

ALTER TABLE "AssessmentDomain" RENAME TO "domain_penilaian";
ALTER TABLE "domain_penilaian" RENAME COLUMN "id" TO "id_domain";
ALTER TABLE "domain_penilaian" RENAME COLUMN "name" TO "nama";
ALTER TABLE "domain_penilaian" RENAME COLUMN "description" TO "deskripsi";
ALTER TABLE "domain_penilaian" RENAME COLUMN "sortOrder" TO "urutan";
ALTER TABLE "domain_penilaian" RENAME COLUMN "isActive" TO "aktif";
ALTER TABLE "domain_penilaian" RENAME COLUMN "createdAt" TO "dibuat_pada";
ALTER TABLE "domain_penilaian" RENAME COLUMN "updatedAt" TO "diperbarui_pada";

ALTER TABLE "AssessmentScale" RENAME TO "skala_penilaian";
ALTER TABLE "skala_penilaian" RENAME COLUMN "id" TO "id_skala";
ALTER TABLE "skala_penilaian" RENAME COLUMN "code" TO "kode";
ALTER TABLE "skala_penilaian" RENAME COLUMN "description" TO "deskripsi";
ALTER TABLE "skala_penilaian" RENAME COLUMN "sortOrder" TO "urutan";
ALTER TABLE "skala_penilaian" RENAME COLUMN "isActive" TO "aktif";
ALTER TABLE "skala_penilaian" RENAME COLUMN "createdAt" TO "dibuat_pada";

ALTER TABLE "Assessment" RENAME TO "penilaian";
ALTER TABLE "penilaian" RENAME COLUMN "id" TO "id_penilaian";
ALTER TABLE "penilaian" RENAME COLUMN "studentId" TO "id_siswa";
ALTER TABLE "penilaian" RENAME COLUMN "academicYearId" TO "id_tahun_ajaran";
ALTER TABLE "penilaian" RENAME COLUMN "classId" TO "id_kelas";
ALTER TABLE "penilaian" RENAME COLUMN "domainId" TO "id_domain";
ALTER TABLE "penilaian" RENAME COLUMN "scaleId" TO "id_skala";
ALTER TABLE "penilaian" RENAME COLUMN "period" TO "periode";
ALTER TABLE "penilaian" RENAME COLUMN "narrative" TO "narasi";
ALTER TABLE "penilaian" RENAME COLUMN "teacherNote" TO "catatan_guru";
ALTER TABLE "penilaian" RENAME COLUMN "createdBy" TO "dibuat_oleh";
ALTER TABLE "penilaian" RENAME COLUMN "createdAt" TO "dibuat_pada";
ALTER TABLE "penilaian" RENAME COLUMN "updatedAt" TO "diperbarui_pada";

ALTER TABLE "DevelopmentReport" RENAME TO "laporan_perkembangan";
ALTER TABLE "laporan_perkembangan" RENAME COLUMN "id" TO "id_laporan";
ALTER TABLE "laporan_perkembangan" RENAME COLUMN "reportNo" TO "no_laporan";
ALTER TABLE "laporan_perkembangan" RENAME COLUMN "studentId" TO "id_siswa";
ALTER TABLE "laporan_perkembangan" RENAME COLUMN "academicYearId" TO "id_tahun_ajaran";
ALTER TABLE "laporan_perkembangan" RENAME COLUMN "classId" TO "id_kelas";
ALTER TABLE "laporan_perkembangan" RENAME COLUMN "period" TO "periode";
ALTER TABLE "laporan_perkembangan" RENAME COLUMN "summary" TO "ringkasan";
ALTER TABLE "laporan_perkembangan" RENAME COLUMN "homeRecommendation" TO "rekomendasi_rumah";
ALTER TABLE "laporan_perkembangan" RENAME COLUMN "attendanceSummary" TO "ringkasan_kehadiran";
ALTER TABLE "laporan_perkembangan" RENAME COLUMN "createdBy" TO "dibuat_oleh";
ALTER TABLE "laporan_perkembangan" RENAME COLUMN "teacherId" TO "id_guru";
ALTER TABLE "laporan_perkembangan" RENAME COLUMN "publishedBy" TO "diterbitkan_oleh";
ALTER TABLE "laporan_perkembangan" RENAME COLUMN "publishedAt" TO "diterbitkan_pada";
ALTER TABLE "laporan_perkembangan" RENAME COLUMN "createdAt" TO "dibuat_pada";
ALTER TABLE "laporan_perkembangan" RENAME COLUMN "reportUpdatedAt" TO "diperbarui_pada";

ALTER TABLE "DevelopmentItem" RENAME TO "detail_laporan";
ALTER TABLE "detail_laporan" RENAME COLUMN "id" TO "id_detail_laporan";
ALTER TABLE "detail_laporan" RENAME COLUMN "reportId" TO "id_laporan";
ALTER TABLE "detail_laporan" RENAME COLUMN "domainId" TO "id_domain";
ALTER TABLE "detail_laporan" RENAME COLUMN "scaleId" TO "id_skala";
ALTER TABLE "detail_laporan" RENAME COLUMN "narrative" TO "narasi";
ALTER TABLE "detail_laporan" RENAME COLUMN "sortOrder" TO "urutan";

ALTER TABLE "Attendance" RENAME TO "presensi";
ALTER TABLE "presensi" RENAME COLUMN "id" TO "id_presensi";
ALTER TABLE "presensi" RENAME COLUMN "studentId" TO "id_siswa";
ALTER TABLE "presensi" RENAME COLUMN "classId" TO "id_kelas";
ALTER TABLE "presensi" RENAME COLUMN "attendanceDate" TO "tanggal";
ALTER TABLE "presensi" RENAME COLUMN "note" TO "catatan";
ALTER TABLE "presensi" RENAME COLUMN "recordedBy" TO "dicatat_oleh";
ALTER TABLE "presensi" RENAME COLUMN "createdAt" TO "dibuat_pada";
ALTER TABLE "presensi" RENAME COLUMN "updatedAt" TO "diperbarui_pada";

ALTER TABLE "Schedule" RENAME TO "jadwal";
ALTER TABLE "jadwal" RENAME COLUMN "id" TO "id_jadwal";
ALTER TABLE "jadwal" RENAME COLUMN "classId" TO "id_kelas";
ALTER TABLE "jadwal" RENAME COLUMN "teacherId" TO "id_guru";
ALTER TABLE "jadwal" RENAME COLUMN "dayOfWeek" TO "hari";
ALTER TABLE "jadwal" RENAME COLUMN "startTime" TO "jam_mulai";
ALTER TABLE "jadwal" RENAME COLUMN "endTime" TO "jam_selesai";
ALTER TABLE "jadwal" RENAME COLUMN "activity" TO "kegiatan";
ALTER TABLE "jadwal" RENAME COLUMN "room" TO "ruang";
ALTER TABLE "jadwal" RENAME COLUMN "notes" TO "catatan";
ALTER TABLE "jadwal" RENAME COLUMN "createdAt" TO "dibuat_pada";
ALTER TABLE "jadwal" RENAME COLUMN "updatedAt" TO "diperbarui_pada";

ALTER TABLE "Activity" RENAME TO "kegiatan";
ALTER TABLE "kegiatan" RENAME COLUMN "id" TO "id_kegiatan";
ALTER TABLE "kegiatan" RENAME COLUMN "title" TO "judul";
ALTER TABLE "kegiatan" RENAME COLUMN "description" TO "deskripsi";
ALTER TABLE "kegiatan" RENAME COLUMN "startDatetime" TO "waktu_mulai";
ALTER TABLE "kegiatan" RENAME COLUMN "endDatetime" TO "waktu_selesai";
ALTER TABLE "kegiatan" RENAME COLUMN "location" TO "lokasi";
ALTER TABLE "kegiatan" RENAME COLUMN "coverImage" TO "gambar_sampul";
ALTER TABLE "kegiatan" RENAME COLUMN "visibility" TO "visibilitas";
ALTER TABLE "kegiatan" RENAME COLUMN "createdBy" TO "dibuat_oleh";
ALTER TABLE "kegiatan" RENAME COLUMN "createdAt" TO "dibuat_pada";
ALTER TABLE "kegiatan" RENAME COLUMN "updatedAt" TO "diperbarui_pada";

ALTER TABLE "ActivityMedia" RENAME TO "media_kegiatan";
ALTER TABLE "media_kegiatan" RENAME COLUMN "id" TO "id_media";
ALTER TABLE "media_kegiatan" RENAME COLUMN "activityId" TO "id_kegiatan";
ALTER TABLE "media_kegiatan" RENAME COLUMN "filePath" TO "lokasi_file";
ALTER TABLE "media_kegiatan" RENAME COLUMN "originalName" TO "nama_file_asli";
ALTER TABLE "media_kegiatan" RENAME COLUMN "sortOrder" TO "urutan";
ALTER TABLE "media_kegiatan" RENAME COLUMN "createdAt" TO "dibuat_pada";

ALTER TABLE "Announcement" RENAME TO "pengumuman";
ALTER TABLE "pengumuman" RENAME COLUMN "id" TO "id_pengumuman";
ALTER TABLE "pengumuman" RENAME COLUMN "title" TO "judul";
ALTER TABLE "pengumuman" RENAME COLUMN "content" TO "isi";
ALTER TABLE "pengumuman" RENAME COLUMN "audience" TO "sasaran";
ALTER TABLE "pengumuman" RENAME COLUMN "classId" TO "id_kelas";
ALTER TABLE "pengumuman" RENAME COLUMN "publishAt" TO "terbit_pada";
ALTER TABLE "pengumuman" RENAME COLUMN "expireAt" TO "kedaluwarsa_pada";
ALTER TABLE "pengumuman" RENAME COLUMN "attachmentPath" TO "lokasi_lampiran";
ALTER TABLE "pengumuman" RENAME COLUMN "createdBy" TO "dibuat_oleh";
ALTER TABLE "pengumuman" RENAME COLUMN "createdAt" TO "dibuat_pada";
ALTER TABLE "pengumuman" RENAME COLUMN "updatedAt" TO "diperbarui_pada";

ALTER TABLE "AnnouncementRead" RENAME TO "pengumuman_dibaca";
ALTER TABLE "pengumuman_dibaca" RENAME COLUMN "announcementId" TO "id_pengumuman";
ALTER TABLE "pengumuman_dibaca" RENAME COLUMN "userId" TO "id_pengguna";
ALTER TABLE "pengumuman_dibaca" RENAME COLUMN "readAt" TO "dibaca_pada";

ALTER TABLE "FeeType" RENAME TO "jenis_biaya";
ALTER TABLE "jenis_biaya" RENAME COLUMN "id" TO "id_jenis_biaya";
ALTER TABLE "jenis_biaya" RENAME COLUMN "code" TO "kode";
ALTER TABLE "jenis_biaya" RENAME COLUMN "name" TO "nama";
ALTER TABLE "jenis_biaya" RENAME COLUMN "description" TO "deskripsi";
ALTER TABLE "jenis_biaya" RENAME COLUMN "defaultAmount" TO "nominal_default";
ALTER TABLE "jenis_biaya" RENAME COLUMN "recurring" TO "berulang";
ALTER TABLE "jenis_biaya" RENAME COLUMN "isActive" TO "aktif";
ALTER TABLE "jenis_biaya" RENAME COLUMN "createdAt" TO "dibuat_pada";
ALTER TABLE "jenis_biaya" RENAME COLUMN "updatedAt" TO "diperbarui_pada";

ALTER TABLE "Invoice" RENAME TO "tagihan";
ALTER TABLE "tagihan" RENAME COLUMN "id" TO "id_tagihan";
ALTER TABLE "tagihan" RENAME COLUMN "invoiceNo" TO "no_tagihan";
ALTER TABLE "tagihan" RENAME COLUMN "studentId" TO "id_siswa";
ALTER TABLE "tagihan" RENAME COLUMN "academicYearId" TO "id_tahun_ajaran";
ALTER TABLE "tagihan" RENAME COLUMN "issueDate" TO "tanggal_terbit";
ALTER TABLE "tagihan" RENAME COLUMN "dueDate" TO "jatuh_tempo";
ALTER TABLE "tagihan" RENAME COLUMN "notes" TO "catatan";
ALTER TABLE "tagihan" RENAME COLUMN "createdBy" TO "dibuat_oleh";
ALTER TABLE "tagihan" RENAME COLUMN "createdAt" TO "dibuat_pada";
ALTER TABLE "tagihan" RENAME COLUMN "invoiceUpdatedAt" TO "diperbarui_pada";

ALTER TABLE "InvoiceItem" RENAME TO "detail_tagihan";
ALTER TABLE "detail_tagihan" RENAME COLUMN "id" TO "id_detail_tagihan";
ALTER TABLE "detail_tagihan" RENAME COLUMN "invoiceId" TO "id_tagihan";
ALTER TABLE "detail_tagihan" RENAME COLUMN "feeTypeId" TO "id_jenis_biaya";
ALTER TABLE "detail_tagihan" RENAME COLUMN "description" TO "keterangan";
ALTER TABLE "detail_tagihan" RENAME COLUMN "quantity" TO "jumlah";
ALTER TABLE "detail_tagihan" RENAME COLUMN "unitAmount" TO "harga_satuan";

ALTER TABLE "Payment" RENAME TO "pembayaran";
ALTER TABLE "pembayaran" RENAME COLUMN "id" TO "id_pembayaran";
ALTER TABLE "pembayaran" RENAME COLUMN "receiptNo" TO "no_kwitansi";
ALTER TABLE "pembayaran" RENAME COLUMN "studentId" TO "id_siswa";
ALTER TABLE "pembayaran" RENAME COLUMN "paymentDate" TO "tanggal_bayar";
ALTER TABLE "pembayaran" RENAME COLUMN "amount" TO "nominal";
ALTER TABLE "pembayaran" RENAME COLUMN "method" TO "metode";
ALTER TABLE "pembayaran" RENAME COLUMN "referenceNo" TO "no_referensi";
ALTER TABLE "pembayaran" RENAME COLUMN "note" TO "catatan";
ALTER TABLE "pembayaran" RENAME COLUMN "proofPath" TO "lokasi_bukti";
ALTER TABLE "pembayaran" RENAME COLUMN "voidReason" TO "alasan_batal";
ALTER TABLE "pembayaran" RENAME COLUMN "recordedBy" TO "dicatat_oleh";
ALTER TABLE "pembayaran" RENAME COLUMN "createdAt" TO "dibuat_pada";
ALTER TABLE "pembayaran" RENAME COLUMN "paymentUpdatedAt" TO "diperbarui_pada";

ALTER TABLE "PaymentAllocation" RENAME TO "alokasi_pembayaran";
ALTER TABLE "alokasi_pembayaran" RENAME COLUMN "id" TO "id_alokasi";
ALTER TABLE "alokasi_pembayaran" RENAME COLUMN "paymentId" TO "id_pembayaran";
ALTER TABLE "alokasi_pembayaran" RENAME COLUMN "invoiceId" TO "id_tagihan";
ALTER TABLE "alokasi_pembayaran" RENAME COLUMN "amount" TO "nominal";
ALTER TABLE "alokasi_pembayaran" RENAME COLUMN "createdAt" TO "dibuat_pada";

ALTER TABLE "Expense" RENAME TO "pengeluaran";
ALTER TABLE "pengeluaran" RENAME COLUMN "id" TO "id_pengeluaran";
ALTER TABLE "pengeluaran" RENAME COLUMN "expenseNo" TO "no_pengeluaran";
ALTER TABLE "pengeluaran" RENAME COLUMN "expenseDate" TO "tanggal";
ALTER TABLE "pengeluaran" RENAME COLUMN "category" TO "kategori";
ALTER TABLE "pengeluaran" RENAME COLUMN "description" TO "deskripsi";
ALTER TABLE "pengeluaran" RENAME COLUMN "amount" TO "nominal";
ALTER TABLE "pengeluaran" RENAME COLUMN "vendor" TO "pemasok";
ALTER TABLE "pengeluaran" RENAME COLUMN "paymentMethod" TO "metode_bayar";
ALTER TABLE "pengeluaran" RENAME COLUMN "proofPath" TO "lokasi_bukti";
ALTER TABLE "pengeluaran" RENAME COLUMN "voidReason" TO "alasan_batal";
ALTER TABLE "pengeluaran" RENAME COLUMN "createdBy" TO "dibuat_oleh";
ALTER TABLE "pengeluaran" RENAME COLUMN "createdAt" TO "dibuat_pada";
ALTER TABLE "pengeluaran" RENAME COLUMN "expenseUpdatedAt" TO "diperbarui_pada";

ALTER TABLE "StudentDocument" RENAME TO "dokumen_siswa";
ALTER TABLE "dokumen_siswa" RENAME COLUMN "id" TO "id_dokumen_siswa";
ALTER TABLE "dokumen_siswa" RENAME COLUMN "studentId" TO "id_siswa";
ALTER TABLE "dokumen_siswa" RENAME COLUMN "documentType" TO "jenis_dokumen";
ALTER TABLE "dokumen_siswa" RENAME COLUMN "originalName" TO "nama_file_asli";
ALTER TABLE "dokumen_siswa" RENAME COLUMN "storagePath" TO "lokasi_file";
ALTER TABLE "dokumen_siswa" RENAME COLUMN "mimeType" TO "tipe_mime";
ALTER TABLE "dokumen_siswa" RENAME COLUMN "sizeBytes" TO "ukuran_byte";
ALTER TABLE "dokumen_siswa" RENAME COLUMN "visibility" TO "visibilitas";
ALTER TABLE "dokumen_siswa" RENAME COLUMN "uploadedBy" TO "diunggah_oleh";
ALTER TABLE "dokumen_siswa" RENAME COLUMN "createdAt" TO "dibuat_pada";

ALTER TABLE "AuditLog" RENAME TO "log_audit";
ALTER TABLE "log_audit" RENAME COLUMN "id" TO "id_log";
ALTER TABLE "log_audit" RENAME COLUMN "userId" TO "id_pengguna";
ALTER TABLE "log_audit" RENAME COLUMN "action" TO "aksi";
ALTER TABLE "log_audit" RENAME COLUMN "entityType" TO "jenis_entitas";
ALTER TABLE "log_audit" RENAME COLUMN "entityId" TO "id_entitas";
ALTER TABLE "log_audit" RENAME COLUMN "beforeJson" TO "data_sebelum";
ALTER TABLE "log_audit" RENAME COLUMN "afterJson" TO "data_sesudah";
ALTER TABLE "log_audit" RENAME COLUMN "ipAddress" TO "alamat_ip";
ALTER TABLE "log_audit" RENAME COLUMN "userAgent" TO "agen_pengguna";
ALTER TABLE "log_audit" RENAME COLUMN "createdAt" TO "dibuat_pada";

ALTER TABLE "PasswordResetToken" RENAME TO "token_reset_sandi";
ALTER TABLE "token_reset_sandi" RENAME COLUMN "id" TO "id_token";
ALTER TABLE "token_reset_sandi" RENAME COLUMN "userId" TO "id_pengguna";
ALTER TABLE "token_reset_sandi" RENAME COLUMN "tokenHash" TO "hash_token";
ALTER TABLE "token_reset_sandi" RENAME COLUMN "expiresAt" TO "kedaluwarsa_pada";
ALTER TABLE "token_reset_sandi" RENAME COLUMN "usedAt" TO "dipakai_pada";
ALTER TABLE "token_reset_sandi" RENAME COLUMN "createdAt" TO "dibuat_pada";

ALTER TABLE "SiteSetting" RENAME TO "pengaturan_situs";
ALTER TABLE "pengaturan_situs" RENAME COLUMN "key" TO "kunci";
ALTER TABLE "pengaturan_situs" RENAME COLUMN "value" TO "nilai";
ALTER TABLE "pengaturan_situs" RENAME COLUMN "updatedAt" TO "diperbarui_pada";

ALTER TABLE "HeroSlide" RENAME TO "slide_beranda";
ALTER TABLE "slide_beranda" RENAME COLUMN "id" TO "id_slide";
ALTER TABLE "slide_beranda" RENAME COLUMN "eyebrow" TO "label_atas";
ALTER TABLE "slide_beranda" RENAME COLUMN "title" TO "judul";
ALTER TABLE "slide_beranda" RENAME COLUMN "accent" TO "aksen";
ALTER TABLE "slide_beranda" RENAME COLUMN "description" TO "deskripsi";
ALTER TABLE "slide_beranda" RENAME COLUMN "image" TO "gambar";
ALTER TABLE "slide_beranda" RENAME COLUMN "imageAlt" TO "teks_alt_gambar";
ALTER TABLE "slide_beranda" RENAME COLUMN "sortOrder" TO "urutan";
ALTER TABLE "slide_beranda" RENAME COLUMN "isActive" TO "aktif";
ALTER TABLE "slide_beranda" RENAME COLUMN "createdAt" TO "dibuat_pada";
ALTER TABLE "slide_beranda" RENAME COLUMN "updatedAt" TO "diperbarui_pada";

ALTER TABLE "GalleryItem" RENAME TO "galeri";
ALTER TABLE "galeri" RENAME COLUMN "id" TO "id_galeri";
ALTER TABLE "galeri" RENAME COLUMN "title" TO "judul";
ALTER TABLE "galeri" RENAME COLUMN "category" TO "kategori";
ALTER TABLE "galeri" RENAME COLUMN "image" TO "gambar";
ALTER TABLE "galeri" RENAME COLUMN "sortOrder" TO "urutan";
ALTER TABLE "galeri" RENAME COLUMN "isActive" TO "aktif";
ALTER TABLE "galeri" RENAME COLUMN "createdAt" TO "dibuat_pada";
ALTER TABLE "galeri" RENAME COLUMN "updatedAt" TO "diperbarui_pada";

ALTER TABLE "Facility" RENAME TO "fasilitas";
ALTER TABLE "fasilitas" RENAME COLUMN "id" TO "id_fasilitas";
ALTER TABLE "fasilitas" RENAME COLUMN "title" TO "judul";
ALTER TABLE "fasilitas" RENAME COLUMN "description" TO "deskripsi";
ALTER TABLE "fasilitas" RENAME COLUMN "image" TO "gambar";
ALTER TABLE "fasilitas" RENAME COLUMN "sortOrder" TO "urutan";
ALTER TABLE "fasilitas" RENAME COLUMN "isActive" TO "aktif";
ALTER TABLE "fasilitas" RENAME COLUMN "createdAt" TO "dibuat_pada";
ALTER TABLE "fasilitas" RENAME COLUMN "updatedAt" TO "diperbarui_pada";

ALTER TABLE "Testimonial" RENAME TO "testimoni";
ALTER TABLE "testimoni" RENAME COLUMN "id" TO "id_testimoni";
ALTER TABLE "testimoni" RENAME COLUMN "name" TO "nama";
ALTER TABLE "testimoni" RENAME COLUMN "relation" TO "hubungan";
ALTER TABLE "testimoni" RENAME COLUMN "quote" TO "kutipan";
ALTER TABLE "testimoni" RENAME COLUMN "sortOrder" TO "urutan";
ALTER TABLE "testimoni" RENAME COLUMN "isActive" TO "aktif";
ALTER TABLE "testimoni" RENAME COLUMN "createdAt" TO "dibuat_pada";
ALTER TABLE "testimoni" RENAME COLUMN "updatedAt" TO "diperbarui_pada";

ALTER TABLE "Faq" RENAME TO "tanya_jawab";
ALTER TABLE "tanya_jawab" RENAME COLUMN "id" TO "id_tanya_jawab";
ALTER TABLE "tanya_jawab" RENAME COLUMN "question" TO "pertanyaan";
ALTER TABLE "tanya_jawab" RENAME COLUMN "answer" TO "jawaban";
ALTER TABLE "tanya_jawab" RENAME COLUMN "category" TO "kategori";
ALTER TABLE "tanya_jawab" RENAME COLUMN "sortOrder" TO "urutan";
ALTER TABLE "tanya_jawab" RENAME COLUMN "isActive" TO "aktif";
ALTER TABLE "tanya_jawab" RENAME COLUMN "createdAt" TO "dibuat_pada";
ALTER TABLE "tanya_jawab" RENAME COLUMN "updatedAt" TO "diperbarui_pada";

-- 3) Buat ulang indeks dengan nama baru
CREATE UNIQUE INDEX "pengguna_email_key" ON "pengguna"("email");
CREATE UNIQUE INDEX "pengguna_nama_pengguna_key" ON "pengguna"("nama_pengguna");
CREATE UNIQUE INDEX "wali_id_pengguna_key" ON "wali"("id_pengguna");
CREATE UNIQUE INDEX "guru_id_pengguna_key" ON "guru"("id_pengguna");
CREATE UNIQUE INDEX "guru_kode_pegawai_key" ON "guru"("kode_pegawai");
CREATE UNIQUE INDEX "tahun_ajaran_nama_key" ON "tahun_ajaran"("nama");
CREATE UNIQUE INDEX "siswa_kode_siswa_key" ON "siswa"("kode_siswa");
CREATE UNIQUE INDEX "siswa_nis_key" ON "siswa"("nis");
CREATE UNIQUE INDEX "siswa_nisn_key" ON "siswa"("nisn");
CREATE UNIQUE INDEX "kelas_id_tahun_ajaran_kode_key" ON "kelas"("id_tahun_ajaran", "kode");
CREATE UNIQUE INDEX "penempatan_kelas_id_siswa_id_tahun_ajaran_key" ON "penempatan_kelas"("id_siswa", "id_tahun_ajaran");
CREATE UNIQUE INDEX "pendaftaran_ppdb_no_pendaftaran_key" ON "pendaftaran_ppdb"("no_pendaftaran");
CREATE UNIQUE INDEX "pendaftaran_ppdb_id_siswa_key" ON "pendaftaran_ppdb"("id_siswa");
CREATE UNIQUE INDEX "domain_penilaian_nama_key" ON "domain_penilaian"("nama");
CREATE UNIQUE INDEX "skala_penilaian_kode_key" ON "skala_penilaian"("kode");
CREATE UNIQUE INDEX "penilaian_id_siswa_id_tahun_ajaran_periode_id_domain_key" ON "penilaian"("id_siswa", "id_tahun_ajaran", "periode", "id_domain");
CREATE UNIQUE INDEX "laporan_perkembangan_no_laporan_key" ON "laporan_perkembangan"("no_laporan");
CREATE UNIQUE INDEX "laporan_perkembangan_id_siswa_id_tahun_ajaran_periode_key" ON "laporan_perkembangan"("id_siswa", "id_tahun_ajaran", "periode");
CREATE UNIQUE INDEX "detail_laporan_id_laporan_id_domain_key" ON "detail_laporan"("id_laporan", "id_domain");
CREATE INDEX "presensi_tanggal_idx" ON "presensi"("tanggal");
CREATE INDEX "presensi_id_siswa_tanggal_idx" ON "presensi"("id_siswa", "tanggal");
CREATE UNIQUE INDEX "presensi_id_siswa_tanggal_key" ON "presensi"("id_siswa", "tanggal");
CREATE UNIQUE INDEX "kegiatan_slug_key" ON "kegiatan"("slug");
CREATE UNIQUE INDEX "pengumuman_slug_key" ON "pengumuman"("slug");
CREATE UNIQUE INDEX "jenis_biaya_kode_key" ON "jenis_biaya"("kode");
CREATE UNIQUE INDEX "tagihan_no_tagihan_key" ON "tagihan"("no_tagihan");
CREATE INDEX "tagihan_id_siswa_status_idx" ON "tagihan"("id_siswa", "status");
CREATE INDEX "tagihan_jatuh_tempo_idx" ON "tagihan"("jatuh_tempo");
CREATE UNIQUE INDEX "pembayaran_no_kwitansi_key" ON "pembayaran"("no_kwitansi");
CREATE UNIQUE INDEX "alokasi_pembayaran_id_pembayaran_id_tagihan_key" ON "alokasi_pembayaran"("id_pembayaran", "id_tagihan");
CREATE UNIQUE INDEX "pengeluaran_no_pengeluaran_key" ON "pengeluaran"("no_pengeluaran");
CREATE INDEX "log_audit_jenis_entitas_id_entitas_idx" ON "log_audit"("jenis_entitas", "id_entitas");
CREATE INDEX "log_audit_dibuat_pada_idx" ON "log_audit"("dibuat_pada");
CREATE UNIQUE INDEX "token_reset_sandi_hash_token_key" ON "token_reset_sandi"("hash_token");
